# paph

./: README.md
paph_client/: README.md
paph_client/web/: index.html
paph_client/web/css/: default.css
paph_client/web/js/: app.js  contentCtrls.js  frameCtrls.js  servs.js
paph_client/web/partials/: info.html  rp.html  slp.html
paph_server/: .gitignore  ChangeLog.md  Main.hs  README.md  mutantserver.cabal_old  paph-server.cabal
paph_server/src/: ClientHandling.hs  Data.hs  Handshake.hs  Main.hs  Message.hs  ServerState.hs
