name:                paph-server
version:             0.1.0.0
description:         Back end for paph.
license:             AGPL-3
license-file:        LICENSE
author:              Viktor Sjölind
maintainer:          viktor@sjolind.se
copyright:           Viktor Sjölind 2017
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

executable paph-server
  main-is:             Main.hs
  -- other-modules:       
  other-extensions:    OverloadedStrings, DeriveGeneric
  build-depends:       base >=4.9 && <4.10, text >=1.2 && <1.3
  hs-source-dirs:      src
  default-language:    Haskell2010
